[tool.poetry]
name = "strass"
version = "0.1.0"
description = ""
authors = ["de20ce <vincent.whannou.de.dravo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
